# name_picker

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  tailwind.config.js
.github/workflows/: test.yaml
end2end/: .gitignore  package-lock.json  package.json  playwright.config.ts
end2end/tests/: example.spec.ts  new-page-tests.spec.ts
src/: app.rs  lib.rs  main.rs  routes.rs  utils.rs
src/components/: bottom_nav.rs  button.rs  card.rs  card_grid.rs  confetti.rs  input.rs  intro_tile.rs  mod.rs  select.rs
src/data/: person.rs
src/pages/: home.rs
